# conway_game_of_life

./: Cargo.toml  README.md
src/: conway.rs  main.rs
